--- a/jenkinsfile
+++ b/jenkinsfile
@@ -2,93 +2,48 @@ pipeline {
     agent any
 
     stages {
-        stage('compile') {
+      
+        stage('Build') {
             steps {
-                echo 'complie'
-                sh 'mvn compile'
-            }
-        }
-
-        stage('mvn build') {
-            steps {
-                echo "build project"
                 sh 'mvn -Dmaven.test.skip=true clean package'
             }
         }
 
- /*       stage('test') {
-            steps {
-                echo "Tests"
-                sh 'mvn test'
-
-            }
-
-        }*/
-
 
         stage('install') {
             steps {
-                echo 'install'
-                sh 'mvn  -DskipTest clean install '
+                sh 'mvn  -Dmaven.test.skip=true clean install '
 
             }
 
         }
-
-        stage('Dokcer build image') {
+       
+        stage('Docker build image') {
             steps {
                 script {
-                    echo "Dokcer build image"
-                    sh 'docker build -t chjasser/tp-achat-validation -f Dockerfile .'
+                    echo "Docker build image"
+                    sh 'docker build -t fakher14/tpachat -f Dockerfile .'
                 }
             }
         }
-        stage('Dokcer push') {
-            steps {
+        stage('Docker hub push') {
+           steps {
                 script {
-                    echo "Dokcer push"
-                    withCredentials([string(credentialsId: 'dockerhub-pwd', variable: 'dockerhubpwd')]) {
-                        sh 'docker login -u chjasser -p ${dockerhubpwd}'
-                        sh 'docker tag  chjasser/tp-achat-validation chjasser/tp-achat-validation:1.0'
-                        sh 'docker push chjasser/tp-achat-validation:1.0'
-                        sh 'docker logout'
-                    }
-
-                }
-            }
+                    echo "Docker push"
+                 withCredentials([string(credentialsId: '1234', variable: 'dockerhub')]) {
+                       sh 'docker login -u fakher14 -p ${dockerhub}'
+                       sh 'docker tag  tpachat fakher14/tpachat:1.0'
+                       sh 'docker push fakher14/tpachat:1.0'
+                       sh 'docker logout'
+                   }
+               }
+           }
         }
-
-        stage('Dokcer pull') {
-            steps {
-                script {
-                    echo "Dokcer pull"
-                    withCredentials([string(credentialsId: 'dockerhub-pwd', variable: 'dockerhubpwd')]) {
-                        sh 'docker login -u chjasser -p ${dockerhubpwd}'
-                        sh 'docker pull chjasser/tpachatprojecttest:1.0'
-                        sh 'docker logout'
-                    }
-
-                }
-            }
-        }
-
-        stage('Dokcer Cleaning up') {
-            steps{
-                sh "docker rmi chjasser/tpachatprojecttest:1.0"
-            }
-        }
+       
 
 
     }
-    post {
-        failure {
-            emailext to: "cjasser40@gmail.com",
-                    subject: "jenkins build:${currentBuild.currentResult}: ${env.JOB_NAME}",
-                    body: "${currentBuild.currentResult}: Job ${env.JOB_NAME}\nMore Info can be found here: ${env.BUILD_URL}",
-                    attachLog: true,
-                    compressLog: true,
-                    recipientProviders: [buildUser(), developers(), brokenTestsSuspects(), brokenBuildSuspects()]
-        }
+   
 
     }
 }
