--- a/.env
+++ b/.env
@@ -6,6 +6,6 @@ MYSQLDB_DOCKER_PORT=3306
 SPRING_LOCAL_PORT=8089
 SPRING_DOCKER_PORT=8089
 SPRING_CONTAINER=spring-app
-DOCKER_IMAGE=tpachatproject
-REGISTRY=chjasser/validation_devops
+DOCKER_IMAGE=tpachat
+REGISTRY=fakher14/tpachat
 TAG:1.0
