--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,12 @@
-version: "3.8"
+version: "3.7"
 
 services:
   mysqldb:
     image: mysql:5.7
     restart: unless-stopped
+    container_name: mysqldb
+    networks:
+      - spring-network
     env_file: ./.env
     environment:
       - MYSQL_ROOT_PASSWORD=$MYSQLDB_ROOT_PASSWORD
@@ -13,25 +16,36 @@ services:
     volumes:
       - db:/var/lib/mysql
   app:
+    working_dir: /spring-app
     depends_on:
       - mysqldb
-    build: ./spring-app
+    build:
+      context: .
+      dockerfile: Dockerfile
+    image: $REGISTRY:$TAG
     restart: on-failure
+    container_name: $SPRING_CONTAINER
+    networks:
+      - spring-network
     env_file: ./.env
     ports:
       - $SPRING_LOCAL_PORT:$SPRING_DOCKER_PORT
     environment:
       SPRING_APPLICATION_JSON: '{
-        "spring.datasource.url"  : "jdbc:mysql://mysqldb:$MYSQLDB_DOCKER_PORT/$MYSQLDB_DATABASE?useSSL=false",
+        "spring.datasource.url"  : "jdbc:mysql://mysqldb:$MYSQLDB_DOCKER_PORT/$MYSQLDB_DATABASE?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&useSSL=false&createDatabaseIfNotExists=true",
         "spring.datasource.username" : "$MYSQLDB_USER",
         "spring.datasource.password" : "$MYSQLDB_ROOT_PASSWORD",
         "spring.jpa.properties.hibernate.dialect" : "org.hibernate.dialect.MySQL5InnoDBDialect",
         "spring.jpa.hibernate.ddl-auto" : "update"
       }'
     volumes:
-      - .m2:/root/.m2
+      - .m2:/root/maven-repo
     stdin_open: true
     tty: true
+    networks:
+  spring-network:
+    name: spring-network
 
 volumes:
-  db:
+   db:
+   .m2:
