--- a/jenkinsfile
+++ b/jenkinsfile
@@ -23,7 +23,7 @@ pipeline {
          stage('start container') {
             steps {
                 echo 'start container'
-                sh 'docker-compose up'
+                sh 'docker-compose up -d'
                
             }
         }
