--- a/.env
+++ b/.env
@@ -7,5 +7,5 @@ SPRING_LOCAL_PORT=8089
 SPRING_DOCKER_PORT=8089
 SPRING_CONTAINER=spring-app
 DOCKER_IMAGE=tpachat
-REGISTRY=fakher14/tpachat
+REGISTRY=tpachat
 TAG:1.0
