--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,7 +41,7 @@ services:
     volumes:
       - .m2:/var/lib/tpachat
     stdin_open: true
-    tty: trues
+    tty: true
 networks:
   spring-network:
     name: spring-network
