--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,22 +1,32 @@
-version: "3.8"
+version: "3.7"
 
 services:
   mysqldb:
     image: mysql:5.7
     restart: unless-stopped
+    container_name: mysqldb
+    networks:
+      - spring-network
     env_file: ./.env
     environment:
       - MYSQL_ROOT_PASSWORD=$MYSQLDB_ROOT_PASSWORD
       - MYSQL_DATABASE=$MYSQLDB_DATABASE
     ports:
-      - $MYSQLDB_LOCAL_PORT:$MYSQLDB_DOCKER_PORT
+      - 3366:$MYSQLDB_DOCKER_PORT
     volumes:
       - db:/var/lib/mysql
   app:
+    working_dir: /spring-app
     depends_on:
       - mysqldb
-    build: ./spring-app
+    build:
+      context: .
+      dockerfile: Dockerfile
+    image: $REGISTRY
     restart: on-failure
+    container_name: $SPRING_CONTAINER
+    networks:
+      - spring-network
     env_file: ./.env
     ports:
       - $SPRING_LOCAL_PORT:$SPRING_DOCKER_PORT
@@ -32,7 +42,9 @@ services:
       - .m2:/var/lib/tpachat
     stdin_open: true
     tty: true
-
+networks:
+  spring-network:
+    name: spring-network
 volumes:
   db:
-  .m2
+  .m2:
