--- a/jenkinsfile
+++ b/jenkinsfile
@@ -23,7 +23,7 @@ pipeline {
             steps {
                 script {
                     
-                    sh 'docker compose up -d'
+                    sh 'docker-compose up -d'
                 }
             }
         }
