--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,9 +9,9 @@ server.port=8089
 #spring.datasource.url=jdbc:mysql://localhost:3306/tpachato?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&useSSL=false
 #spring.datasource.username=root
 #spring.datasource.password=
-spring.datasource.url=jdbc:mysql://mysqldb:${MYSQLDB_DOCKER_PORT}/${MYSQLDB_DATABASE}?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&useSSL=false
-spring.datasource.username=${MYSQLDB_USER}
-spring.datasource.password=${MYSQLDB_ROOT_PASSWORD}
+spring.datasource.url=jdbc:mysql://mysqldb:3306/tpstock?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&useSSL=false
+spring.datasource.username=root
+spring.datasource.password=123456
 ### JPA / HIBERNATE ###
 spring.jpa.show-sql=true
 #spring.jpa.generate-ddl=true
