--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,12 +7,12 @@ server.servlet.context-path=/SpringMVC
 server.port=8089
 ### DATABASE ###
 
-#spring.datasource.url=jdbc:mysql://localhost:${MYSQLDB_DOCKER_PORT}/tpachato?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&useSSL=false
+#spring.datasource.url=jdbc:mysql://localhost:3306/${MYSQLDB_DATABASE}?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&useSSL=false
 #spring.datasource.username=root
 #spring.datasource.password=
 
 
-spring.datasource.url=jdbc:mysql://mysqldb:3306/tpstock?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/tpstock?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=123456
 ### JPA / HIBERNATE ###
