--- a/pom.xml
+++ b/pom.xml
@@ -17,20 +17,6 @@
     <properties>
         <java.version>1.8</java.version>
         <maven-jar-plugin.version>3.1.1</maven-jar-plugin.version>
-        <project.test.result.directory>${project.build.directory}/test-results</project.test.result.directory>
-        <sonar.host.url>SONAR_HOST_URL</sonar.host.url>
-        <sonar.projectKey>SONAR_PROJECT_KEY</sonar.projectKey>
-        <sonar.login>SONAR_LOGIN</sonar.login>
-        <sonar.scm.provider>git</sonar.scm.provider>
-        <sonar.java.codeCoveragePlugin>jacoco</sonar.java.codeCoveragePlugin>
-        <sonar.coverage.jacoco.xmlReportPaths>${project.test.result.directory}/jacoco/jacoco.xml
-        </sonar.coverage.jacoco.xmlReportPaths>
-        <sonar.exclusions>
-            **/*.xml
-        </sonar.exclusions>
-        <sonar.coverage.exclusions>
-            **/qualitymeasurementsample/*
-        </sonar.coverage.exclusions>
     </properties>
 
     <dependencies>
@@ -110,41 +96,24 @@
                 <artifactId>sonar-maven-plugin</artifactId>
                 <version>3.9.1.2184</version>
             </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.0.0-M7</version>
 
-                <configuration>
-                    <argLine>${jacocoArgLine}</argLine>
-                    <reportsDirectory>${project.test.result.directory}/surefire</reportsDirectory>
-                </configuration>
-            </plugin>
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
                 <version>0.8.5</version>
                 <executions>
                     <execution>
-                        <id>pre-test</id>
+                        <id>default-prepare-agent</id>
                         <goals>
                             <goal>prepare-agent</goal>
                         </goals>
-                        <configuration>
-                            <propertyName>jacocoArgLine</propertyName>
-                            <destFile>${project.test.result.directory}/jacoco/jacoco.exec</destFile>
-                        </configuration>
                     </execution>
                     <execution>
-                        <id>post-test</id>
-                        <phase>test</phase>
+                        <id>default-report</id>
+                        <phase>prepare-package</phase>
                         <goals>
                             <goal>report</goal>
                         </goals>
-                        <configuration>
-                            <dataFile>${project.test.result.directory}/jacoco/jacoco.exec</dataFile>
-                            <outputDirectory>${project.test.result.directory}/jacoco</outputDirectory>
-                        </configuration>
                     </execution>
                 </executions>
             </plugin>
