--- a/jenkinsfile
+++ b/jenkinsfile
@@ -5,16 +5,21 @@ pipeline {
     }
     stages {
       
+         stage('Clean') {
+            steps {
+                sh 'mvn clean'
+            }
+        }
         stage('Build') {
             steps {
-                sh 'mvn -Dmaven.test.skip=true clean package'
+                sh 'mvn -Dmaven.test.skip=true package'
             }
         }
 
 
         stage('install') {
             steps {
-                sh 'mvn  -Dmaven.test.skip=true clean install '
+                sh 'mvn  -Dmaven.test.skip=true install '
 
             }
 
