--- a/jenkinsfile
+++ b/jenkinsfile
@@ -5,16 +5,21 @@ pipeline {
     }
     stages {
       
+       stage('Clean') {
+            steps {
+                sh 'mvn clean'
+            }
+        }
         stage('Build') {
             steps {
-                sh 'mvn -Dmaven.test.skip=true clean package'
+                sh 'mvn -Dmaven.test.skip=true package'
             }
         }
 
 
         stage('install') {
             steps {
-                sh 'mvn  -Dmaven.test.skip=true clean install '
+                sh 'mvn  -Dmaven.test.skip=true install '
 
             }
 
@@ -27,18 +32,31 @@ pipeline {
                
             }
         }
-        stage('Docker hub push') {
-           steps {
-                script {
-                    echo "Docker push"
-                withCredentials([string(credentialsId: 'tpachat', variable: 'docker')]) {
-                       sh 'docker login -u fakher14 -p ${docker}'
-                       sh 'docker push fakher14/tpachat:1.0'
-                       sh 'docker logout'
-                   }
-               }
-           }
+
+  stage('build_push_image') {
+
+              steps {
+                        script {
+                              def dockerImage = docker.build("fakher14/tpachat")
+                            //  docker.withRegistry('','registryCredential'){
+                              //           dockerImage.push("latest")
+                               //}
+                          }
+              }
         }
+       
+      //  stage('Docker hub push') {
+        //   steps {
+          //      script {
+            //        echo "Docker push"
+              //  withCredentials([string(credentialsId: 'tpachat', variable: 'docker')]) {
+                //       sh 'docker login -u fakher14 -p ${docker}'
+                  //     sh 'docker push fakher14/tpachat:latest'
+                    //   sh 'docker logout'
+               //    }
+              // }
+         //  }
+      //  }
        
 
 
