--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,16 +32,16 @@ services:
       - $SPRING_LOCAL_PORT:$SPRING_DOCKER_PORT
     environment:
       SPRING_APPLICATION_JSON: '{
-        "spring.datasource.url"  : "jdbc:mysql://mysqldb:$MYSQLDB_DOCKER_PORT/$MYSQLDB_DATABASE?useSSL=false",
-        "spring.datasource.username" : "$MYSQLDB_USER",
-        "spring.datasource.password" : "$MYSQLDB_ROOT_PASSWORD",
+        "spring.datasource.url"  : "jdbc:mysql://mysqldbtest:3307/tpachattest?useSSL=false",
+        "spring.datasource.username" : "root",
+        "spring.datasource.password" : "123456",
         "spring.jpa.properties.hibernate.dialect" : "org.hibernate.dialect.MySQL5InnoDBDialect",
         "spring.jpa.hibernate.ddl-auto" : "update"
       }'
     volumes:
       - .m2:/var/lib/tpachat
     stdin_open: true
-    tty: trues
+    tty: true
 networks:
   spring-network:
     name: spring-network
