--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,34 +46,34 @@ services:
     volumes:
       - dbSpring:/var/lib/mysqlspring
 
-  prometheus:
-    image: prom/prometheus
-    volumes:
-      - ./config/:/etc/prometheus
-      - ./data/prometheus:/data
-    command:
-      - '--config.file=/etc/prometheus/prometheus.yml'
-      - '--storage.tsdb.path=/prometheus'
-      - '--storage.tsdb.retention=31d'
-      - '--web.console.libraries=/usr/share/prometheus/console_libraries'
-      - '--web.console.templates=/usr/share/prometheus/consoles'
-    ports:
-      - "9090:9090"
-    depends_on:
-      - app
-    networks:
-      - spring-network
-    restart: on-failure
-
-
-  grafana:
-    image: grafana/grafana
-    ports:
-      - "3000:3000"
-    depends_on:
-      - prometheus
-    networks:
-      - spring-network
+#  prometheus:
+#    image: prom/prometheus
+#    volumes:
+#      - ./config/:/etc/prometheus
+#      - ./data/prometheus:/data
+#    command:
+#      - '--config.file=/etc/prometheus/prometheus.yml'
+#      - '--storage.tsdb.path=/prometheus'
+#      - '--storage.tsdb.retention=31d'
+#      - '--web.console.libraries=/usr/share/prometheus/console_libraries'
+#      - '--web.console.templates=/usr/share/prometheus/consoles'
+#    ports:
+#      - "9090:9090"
+#    depends_on:
+#      - app
+#    networks:
+#      - spring-network
+#    restart: on-failure
+#
+#
+#  grafana:
+#    image: grafana/grafana
+#    ports:
+#      - "3000:3000"
+#    depends_on:
+#      - prometheus
+#    networks:
+#      - spring-network
 
 networks:
   spring-network:
