--- a/config/prometheus.yml
+++ b/config/prometheus.yml
@@ -28,4 +28,4 @@ scrape_configs:
   - job_name: 'spring'
     metrics_path: '/actuator/prometheus'
     static_configs:
-    - targets: ['http://192.168.1.15:8089/SpringMVC/actuator']
+    - targets: ['192.168.1.15:8089/SpringMVC/actuator']
