--- a/config/prometheus.yml
+++ b/config/prometheus.yml
@@ -25,7 +25,7 @@ scrape_configs:
     metrics_path: /prometheus/
     static_configs:
       - targets: ['192.168.1.15:8080']
-  - job_name: 'spring'
-    metrics_path: '/actuator/prometheus'
-    static_configs:
-    - targets: ['192.168.1.15:8089/SpringMVC/actuator']
+#  - job_name: 'spring'
+#    metrics_path: '/actuator/prometheus'
+#    static_configs:
+#    - targets: ['192.168.1.15:8089/SpringMVC']
