--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,10 @@
     </properties>
 
     <dependencies>
-
+        <dependency>
+            <groupId>io.micrometer</groupId>
+            <artifactId>micrometer-registry-prometheus</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
