--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,39 +46,38 @@ services:
   #    volumes:
   #      - tpstockdb:/var/lib/mysql
 
-    prometheus:
-      restart: always
-      container_name: prometheus
-      image: docker.io/prom/prometheus:latest
-      volumes:
-        - /home/vagrant/data/prometheus.yml:/etc/prometheus
-#        - ./data/prometheus:/data
-      command:
-        - '--config.file=/etc/prometheus/prometheus.yml'
-        - '--storage.tsdb.path=/prometheus'
-        - '--storage.tsdb.retention=15d'
-        - '--web.console.libraries=/usr/share/prometheus/console_libraries'
-        - '--web.console.templates=/usr/share/prometheus/consoles'
-        - '--storage.tsdb.min-block-duration=6h'
-        - '--web.enable-admin-api'
-        - '--web.enable-lifecycle'
-      ports:
-        - "9090:9090"
-  #    depends_on:
-  #      - app
-      networks:
-        - spring-network
+  prometheus:
+    restart: always
+    container_name: prometheus
+    image: docker.io/prom/prometheus:latest
+    volumes:
+      - /home/vagrant/data/prometheus.yml:/etc/prometheus/prometheus.yml
+      - /home/vagrant/data/prometheus:/data
+    command:
+      - '--config.file=/etc/prometheus/prometheus.yml'
+      - '--storage.tsdb.path=/prometheus'
+      - '--storage.tsdb.retention=15d'
+      - '--web.console.libraries=/usr/share/prometheus/console_libraries'
+      - '--web.console.templates=/usr/share/prometheus/consoles'
+      - '--storage.tsdb.min-block-duration=6h'
+      - '--web.enable-admin-api'
+      - '--web.enable-lifecycle'
+    ports:
+      - "9090:9090"
+    #    depends_on:
+    #      - app
+    networks:
+      - spring-network
 
-#
-#
-#  grafana:
-#    image: grafana/grafana
-#    ports:
-#      - "3000:3000"
-#    depends_on:
-#      - prometheus
-#    networks:
-#      - spring-network
+
+  grafana:
+    image: grafana/grafana
+    ports:
+      - "3000:3000"
+    depends_on:
+      - prometheus
+    networks:
+      - spring-network
 
 networks:
   spring-network:
