--- a/pom.xml
+++ b/pom.xml
@@ -87,7 +87,26 @@
                 <artifactId>maven-resources-plugin</artifactId>
                 <version>3.1.0</version>
             </plugin>
+         <plugin>
+				<artifactId>maven-deploy-plugin</artifactId>
+				<version>2.8.1</version>
+				<executions>
+					<execution>
+						<id>default-deploy</id>
+						<phase>deploy</phase>
+						<goals>
+							<goal>deploy</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>   
 		</plugins>
 	</build>
-
+<!-- nexus repo  -->
+	<distributionManagement>
+		<repository>
+			<id>fakher</id>
+			<url>http://192.168.1.46:8081/repository/maven-releases</url>
+		</repository>
+	</distributionManagement>
 </project>
