--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -78,6 +78,9 @@ services:
       - prometheus
     networks:
       - spring-network
+    volumes:
+      - grafana-storage:/var/lib/grafana
+      - grafana-data:/var/lib/grafana
 
 networks:
   spring-network:
@@ -87,3 +90,5 @@ volumes:
   .m2:
   tpstockdb:
   prometheus_data: { }
+  grafana-storage:
+
