--- a/jenkinsfile
+++ b/jenkinsfile
@@ -31,12 +31,13 @@ pipeline {
             }
 
         }
-        stage('sonar') {
-            steps{
-            	 sh '''
-                 mvn sonar:sonar -Dsonar.login=${SONAR_LOGIN} -Dsonar.password=${SONAR_PWD}
-                 '''
-            	 }
+        stage('SonarQube') {
+            steps {
+
+                withSonarQubeEnv('sonarCredentials') {
+                    sh 'mvn  sonar:sonar'
+                }
+            }
         }
 
        stage('nexus_Stage') {
